<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_sharefb">Share this Application</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_rateApp">Rate your App</string>
    <string name="toBMI">BMI Calculator</string>
    <string name="currencySubmit">Submit</string>
    <string name="title_activity_bmi">BMIActivity</string>
    <string name="MaleBMI">Male</string>
    <string name="FemaleBMI">Female</string>
    <string name="BMIGenderTitle">Select Gender</string>
    <string name="blankDesc" />
    <string name="BMISubmit">Calculate BMI</string>
    <string name="BMIHeightTitle">Enter Height</string>

    <string-array name="BMIHeightUnits">
        <item> centimeters </item>
        <item> feet </item>
    </string-array>
    <string-array name="BMIWeightUnits">
        <item>pounds</item>
        <item>Kgs</item>
    </string-array>

    <string name="BMIWeightTitle">Enter Weight</string>
    <string name="InchesHint">inches</string>
    <string name="Inches">(inches)</string>
    <string name="HeightHint">Height</string>
    <string name="WeightHint">Weight</string>
    <string name="title_activity_bmiresult">BMIResult</string>
    <string name="BMIResultTitle">Your BMI is : </string>
    <string name="title_activity_splash_logo">SplashLogoActivity</string>
    <string name="sphinx_about_us">\nThis application was developed by Sphinx development team.\nPlease visit <a href="http://www.bmi.trnkarthik.com">http://www.bmi.trnkarthik.com</a> to know more.</string>
    <string name="corp">Corporation</string>
    <string name="sphinxTagLine">Your fitness tracker.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="Name1">name1</string>
    <string name="name2">Name 2</string>
    <string name="Back">Back</string>
    <string name="applications"> Sphinx Applications</string>
    <string name="knowMoreAboutBMI"><u>Click here to know more about BMI</u>.</string>
    <string name="app_name">BMI Calculator</string><string name="tempString">Temp String</string>
    <string name="selectAge">Select Age</string><string name="defaultAge">25</string>
    <string name="ShareApplication">Share Application</string>
    <string name="ShareBMI">Share This Result.</string>

</resources>