<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_aboutus"/>
     <item
        android:id="@+id/menu_rateApp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_rateApp"/>
       <item
        android:id="@+id/menu_fbSahre"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sharefb"/>

    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>
    
     <item
        android:id="@+id/toBMI"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/toBMI"/>

</menu>