<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashLogoActivity" >

    <TextView
        android:id="@+id/sphinxLogoScreenTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sphinxLogoScreenTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="@string/sphinxTagLine"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/sphinxLogoScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:fontFamily="Sans Serif"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/sphinxLogoScreenApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sphinxLogoScreenTitle"
        android:layout_below="@+id/sphinxLogoScreenTitle"
        android:layout_marginTop="0dp"
        android:text="@string/applications"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>